--- a/charts/front/values-velox-prod-1.yaml
+++ b/charts/front/values-velox-prod-1.yaml
@@ -1,12 +1,6 @@
 namespace: velox
-nodejsImageTag: node:14
-certificateArn: arn:aws:acm:eu-west-1:156041417813:certificate/a6e631a1-3073-4ebb-91d0-b973602876a1
+nodejsImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-prod-1-front:v1.0.7445513
 loadBalancerName: velox-prod-1-alb
 frontHost: "velox.tlf.dev"
+certificateArn: arn:aws:acm:eu-west-1:156041417813:certificate/a6e631a1-3073-4ebb-91d0-b973602876a1
 securityGroups: "sg-0818251ac039f7f53" #allow_cloudfront_origin_facing_sg
-
-# public_subnet_ids = [
-#   "subnet-0890ba5ed274de236",
-#   "subnet-00f22ef5ccfd014a7",
-#   "subnet-0687c9f0c4109a58f",
-# ]
