--- a/charts/api/templates/api-ingress.yaml
+++ b/charts/api/templates/api-ingress.yaml
@@ -9,8 +9,8 @@ metadata:
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=61,routing.http.xff_header_processing.mode=preserve
     alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
-    alb.ingress.kubernetes.io/healthcheck-path: {{ .Values.healthcheckPath }}
-    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
+    # alb.ingress.kubernetes.io/healthcheck-path: {{ .Values.healthcheckPath }}
+    # alb.ingress.kubernetes.io/healthy-threshold-count: '2
     alb.ingress.kubernetes.io/tags: project={{ .Values.namespace }},Name={{ .Values.projectName }}-alb,Namespace={{ .Values.namespace }},Stage={{ .Values.stage }}
     alb.ingress.kubernetes.io/group.name: {{ .Values.projectName }}
     alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'true'
