--- a/charts/api/values-prod-1.yaml
+++ b/charts/api/values-prod-1.yaml
@@ -2,7 +2,7 @@ stage: prod
 projectName: velox-prod-1
 apiHost: "velox-api.tlf.dev"
 
-phpImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-api:latest
+phpImageTag: php:8.0 #156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-api:latest
 nginxImageTag: nginx:latest
 healthcheckPath: /api/doc
 
