--- a/charts/api/templates/api-ingress.yaml
+++ b/charts/api/templates/api-ingress.yaml
@@ -22,6 +22,7 @@ metadata:
     # alb.ingress.kubernetes.io/backend-protocol: "HTTP" # or "HTTPS"
 kubernetes.io/ingress.class: "alb"
 spec:
+  ingressClassName: alb
   rules:
     - host: "{{ .Values.apiHost }}"
       http:
