--- a/charts/api/templates/api-ingress.yaml
+++ b/charts/api/templates/api-ingress.yaml
@@ -23,13 +23,13 @@ kubernetes.io/ingress.class: "alb"
 spec:
   ingressClassName: alb
   rules:
-    - host: "{{ .Values.apiHost }}"
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: velox-api
-                port:
-                  number: 80
+  - host: "{{ .Values.apiHost }}"
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: api-active
+            port:
+              number: 80
