--- a/charts/front/values-prod-1.yaml
+++ b/charts/front/values-prod-1.yaml
@@ -1,5 +1,10 @@
+frontHost: "velox.tlf.dev"
+ddStage: prod
+projectName: velox-prod-1
+loadBalancerName: velox-prod-1-alb
 nodejsImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-prod-1-front:v1.0.7445513
 loadBalancerName: velox-prod-1-alb
-frontHost: "velox.tlf.dev"
 certificateArn: arn:aws:acm:eu-west-1:156041417813:certificate/a6e631a1-3073-4ebb-91d0-b973602876a1
 securityGroups: "sg-0818251ac039f7f53" #allow_cloudfront_origin_facing_sg
+healthcheckPath: /
+subnets: "subnet-0890ba5ed274de236,subnet-00f22ef5ccfd014a7,subnet-0687c9f0c4109a58f" # name: velox-prod-1-public-subnets. CLI: cd 02.VPC; t output -json | jq '.public_subnet_ids.value'    
