Update frontend service name in ingress configuration

--- a/charts/front/templates/front-ingress.yaml
+++ b/charts/front/templates/front-ingress.yaml
@@ -27,6 +27,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: velox-front
+                name: front-active
                 port:
                   number: 80
