Add ingress class annotation for ALB in frontend ingress configuration

--- a/charts/front/templates/front-ingress.yaml
+++ b/charts/front/templates/front-ingress.yaml
@@ -18,6 +18,8 @@ metadata:
     alb.ingress.kubernetes.io/load-balancer-name: {{ .Values.loadBalancerName }}
     alb.ingress.kubernetes.io/security-groups: {{ .Values.securityGroups }}
     alb.ingress.kubernetes.io/subnets: {{ .Values.subnets }}
+
+kubernetes.io/ingress.class: "alb"
 spec:
   rules:
     - host: "{{ .Values.frontHost }}"
