Rename API and frontend services to 'velox-api' and 'velox-front' in ingress configurations

--- a/charts/api/templates/api-ingress.yaml
+++ b/charts/api/templates/api-ingress.yaml
@@ -30,6 +30,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: api-active
+            name: velox-api
             port:
               number: 80
