Refactor API Helm charts to improve configuration structure and add Horizontal Pod Autoscaler

--- a/charts/api/templates/api-deployment.yaml
+++ b/charts/api/templates/api-deployment.yaml
@@ -14,9 +14,9 @@ spec:
         service: velox-api
     spec:
       containers:
-        - image: {{ .Values.nginxImageTag }}
+        - image: {{ .Values.api.nginxImageTag }}
           name: nginx
-        - image: {{ .Values.phpImageTag }}
+        - image: {{ .Values.api.phpImageTag }}
           name: php-fpm
 
 ---
