--- a/charts/api/values-prod-1.yaml
+++ b/charts/api/values-prod-1.yaml
@@ -1,17 +1,26 @@
 apiHost: velox-api.tlf.dev
 projectName: velox-prod-1
 
-api:
-  phpImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-api:latest
-  nginxImageTag: nginx:latest
-  ddStage: prod
-
 ingress:
   loadBalancerName: velox-prod-1-alb
   healthcheckPath: /api/doc
   certificateArn: arn:aws:acm:eu-west-1:156041417813:certificate/a6e631a1-3073-4ebb-91d0-b973602876a1
   securityGroups: "sg-0818251ac039f7f53" # name: allow_cloudfront_origin_facing_sg. CLI: cd 06.EKS; ../terra.sh velox-prod-1 output | grep allow_cloudfront_origin_facing_sg
   subnets: "subnet-0890ba5ed274de236,subnet-00f22ef5ccfd014a7,subnet-0687c9f0c4109a58f" # name: velox-prod-1-public-subnets. CLI: cd 02.VPC; t output -json | jq '.public_subnet_ids.value'    
+
+api:
+  phpImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-api:latest
+  nginxImageTag: nginx:latest
+  ddStage: prod
+  replicas: 4
+  replicasMessageProcessor: 2
+  phpFpmResources:
+    requests:
+      memory: 128Mi
+      cpu: 128m
+    limits:
+      memory: 512Mi
+      cpu: 512m
 
 autoscaler:
   minReplicas: 2
