--- a/charts/api/templates/external-secrets.yaml
+++ b/charts/api/templates/external-secrets.yaml
@@ -4,7 +4,12 @@ metadata:
   name: api-secrets
   namespace: {{ .Values.namespace }}
 spec:
-  backendType: systemManager
+  refreshInterval: 3m
+  secretStoreRef:
+    name: aws-secret-store
+    kind: SecretStore
+  target:
+    name: api-secrets
   data:
 {{- range $key, $value := .Values.ssmParameters }}
     - key: {{ $value }}
