--- a/charts/api/verify.yaml
+++ b/charts/api/verify.yaml
@@ -230,7 +230,7 @@ metadata:
     alb.ingress.kubernetes.io/security-groups: sg-0818251ac039f7f53
     alb.ingress.kubernetes.io/subnets: subnet-0890ba5ed274de236,subnet-00f22ef5ccfd014a7,subnet-0687c9f0c4109a58f
 
-kubernetes.io/ingress.class: "alb"
+# kubernetes.io/ingress.class: "alb"
 spec:
   ingressClassName: alb
   rules:
