--- a/charts/front/templates/front-ingress.yaml
+++ b/charts/front/templates/front-ingress.yaml
@@ -19,7 +19,7 @@ metadata:
     alb.ingress.kubernetes.io/security-groups: {{ .Values.securityGroups }}
     alb.ingress.kubernetes.io/subnets: {{ .Values.subnets }}
 
-kubernetes.io/ingress.class: "alb"
+# kubernetes.io/ingress.class: "alb"
 spec:
   rules:
     - host: "{{ .Values.frontHost }}"
