Update refresh interval in external-secrets.yaml and adjust data structure for consistency

--- a/charts/api/templates/external-secrets.yaml
+++ b/charts/api/templates/external-secrets.yaml
@@ -4,24 +4,27 @@ metadata:
   name: api-secrets
   namespace: {{ .Values.namespace }}
 spec:
-  refreshInterval: 3m
+  refreshInterval: 2m
   secretStoreRef:
     name: aws-secret-store
     kind: SecretStore
+  # target:
+  #   name: velox-api-secrets
   data:
 {{- range $key, $value := .Values.ssmParameters }}
-    - key: {{ $value }}
-      name: {{ $key }}
+  - secretKey: {{ $key }}
+    remoteRef:
+      key: {{ $value }}
 {{- end }}
 
----
-apiVersion: v1
-kind: Secret
-metadata:
-  namespace: {{ .Values.namespace }}
-  name: api-jwt-keys
-stringData:
-{{- range $key, $value := .Values.ssmParametersJwtKeys }}
-  - key: {{ $value }}
-    name: {{ $key }}
-{{- end }}
+# ---
+# apiVersion: external-secrets.io/v1beta1
+# kind: ExternalSecret
+# metadata:
+#   namespace: {{ .Values.namespace }}
+#   name: api-jwt-keys
+# stringData:
+# {{- range $key, $value := .Values.ssmParametersJwtKeys }}
+#   - key: {{ $value }}
+#     name: {{ $key }}
+# {{- end }}
