Add AWS SecretStore configuration and specify AWS region in values-prod-1.yaml

--- a/charts/api/templates/external-secrets.yaml
+++ b/charts/api/templates/external-secrets.yaml
@@ -1,4 +1,16 @@
 apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: aws-secret-store
+  namespace: {{ .Values.namespace }}
+spec:
+  provider:
+    aws:
+      service: ParameterStore
+      region: {{ .Values.aws.region }}
+
+---
+apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: api-secrets
