Update SSM parameter keys in values-prod-1.yaml to use uppercase naming convention

--- a/charts/api/values-prod-1.yaml
+++ b/charts/api/values-prod-1.yaml
@@ -68,53 +68,53 @@ phpIniSettings: |
   opcache.enable=1
 
 ssmParameters:
-  DATABASE_URL: "/api-secrets/database_url"
-  JWT_PASSPHRASE: "/api-secrets/jwt_passphrase"
-  MAILER_DSN: "/api-secrets/mailer_dsn"
-  MESSENGER_TRANSPORT_DSN: "/api-secrets/messenger_transport_dsn"
-  BACKOFFICE_CLIENT_SECRET: "/api-secrets/backoffice_client_secret"
-  BACKOFFICE_PASSWORD: "/api-secrets/backoffice_password"
-  GOOGLE_APPLICATION_CREDENTIALS: "/api-secrets/google_application_credentials"
-  GOOGLE_BI_APPLICATION_CREDENTIALS: "/api-secrets/google_bi_application_credentials"
-  INFOBIP_KEY: "/api-secrets/infobip_key"
-  EDP_CLIENT_SECRET: "/api-secrets/edp_client_secret"
-  EDP_CLIENT_ID: "/api-secrets/edp_client_id"
-  EDP_MADNIX_ID: "/api-secrets/edp_madnix_id"
-  EDP_MADNIX_SECRET: "/api-secrets/edp_madnix_secret"
-  EDP_WINOUI_ID: "/api-secrets/edp_winoui_id"
-  EDP_WINOUI_SECRET: "/api-secrets/edp_winoui_secret"
-  EDP_WILDSULTAN_ID: "/api-secrets/edp_wildsultan_id"
-  EDP_WILDSULTAN_SECRET: "/api-secrets/edp_wildsultan_secret"
-  AWS_KEY: "/api-secrets/aws_key"
-  AWS_SECRET: "/api-secrets/aws_secret"
-  PAYMENT_ALERT_DB_DSN: "/api-secrets/payment_alert_db_dsn"
-  PAYMENT_ALERT_WEBHOOK: "/api-secrets/payment_alert_webhook"
-  SLACK_WEBHOOK: "/api-secrets/slack_webhook"
-  BLACKFIRE_SERVER_ID: "/api-secrets/blackfire_server_id"
-  BLACKFIRE_CLIENT_ID: "/api-secrets/blackfire_client_id"
-  OPTIMOVE_API_KEY: "/api-secrets/optimove_api_key"
-  CAPTAIN_UP_SECRET_MADNIX: "/api-secrets/captain_up_secret_madnix"
-  CAPTAIN_UP_API_KEY_MADNIX: "/api-secrets/captain_up_api_key_madnix"
-  CAPTAIN_UP_SECRET_IBIZAPALACE: "/api-secrets/captain_up_secret_ibizapalace"
-  CAPTAIN_UP_API_KEY_IBIZAPALACE: "/api-secrets/captain_up_api_key_ibizapalace"
-  CAPTAIN_UP_SECRET_YOKIKANA: "/api-secrets/captain_up_secret_yokikana"
-  CAPTAIN_UP_API_KEY_YOKIKANA: "/api-secrets/captain_up_api_key_yokikana"
-  AWS_REGION: "/api-secrets/aws_region"
-  AWS_ACCESS_KEY_ID: "/api-secrets/aws_access_key_id"
-  AWS_SECRET_ACCESS_KEY: "/api-secrets/aws_secret_access_key"
-  AWS_BUCKET_MADNIX: "/api-secrets/aws_bucket_madnix"
-  AWS_BUCKET_WILDSULTAN: "/api-secrets/aws_bucket_wildsultan"
-  AWS_BUCKET_WINOUI: "/api-secrets/aws_bucket_winoui"
-  AWS_BUCKET_IBIZAPALACE: "/api-secrets/aws_bucket_ibizapalace"
-  AWS_BUCKET_YOKIKANA: "/api-secrets/aws_bucket_yokikana"
-  MYAFF_DB_USER: "/api-secrets/myaff_db_user"
-  MYAFF_DB_PASSWORD: "/api-secrets/myaff_db_password"
-  MYAFF_GOOGLE_CLOUD_CREDENTIALS: "/api-secrets/myaff_google_cloud_credentials"
-  MYAFF_DB_SSL_CA: "/api-secrets/myaff_db_ssl_ca"
+  DATABASE_URL: "/api-secrets/DATABASE_URL"
+  JWT_PASSPHRASE: "/api-secrets/JWT_PASSPHRASE"
+  MAILER_DSN: "/api-secrets/MAILER_DSN"
+  MESSENGER_TRANSPORT_DSN: "/api-secrets/MESSENGER_TRANSPORT_DSN"
+  BACKOFFICE_CLIENT_SECRET: "/api-secrets/BACKOFFICE_CLIENT_SECRET"
+  BACKOFFICE_PASSWORD: "/api-secrets/BACKOFFICE_PASSWORD"
+  GOOGLE_APPLICATION_CREDENTIALS: "/api-secrets/GOOGLE_APPLICATION_CREDENTIALS"
+  GOOGLE_BI_APPLICATION_CREDENTIALS: "/api-secrets/GOOGLE_BI_APPLICATION_CREDENTIALS"
+  INFOBIP_KEY: "/api-secrets/INFOBIP_KEY"
+  EDP_CLIENT_SECRET: "/api-secrets/EDP_CLIENT_SECRET"
+  EDP_CLIENT_ID: "/api-secrets/EDP_CLIENT_ID"
+  EDP_MADNIX_ID: "/api-secrets/EDP_MADNIX_ID"
+  EDP_MADNIX_SECRET: "/api-secrets/EDP_MADNIX_SECRET"
+  EDP_WINOUI_ID: "/api-secrets/EDP_WINOUI_ID"
+  EDP_WINOUI_SECRET: "/api-secrets/EDP_WINOUI_SECRET"
+  EDP_WILDSULTAN_ID: "/api-secrets/EDP_WILDSULTAN_ID"
+  EDP_WILDSULTAN_SECRET: "/api-secrets/EDP_WILDSULTAN_SECRET"
+  AWS_KEY: "/api-secrets/AWS_KEY"
+  AWS_SECRET: "/api-secrets/AWS_SECRET"
+  PAYMENT_ALERT_DB_DSN: "/api-secrets/PAYMENT_ALERT_DB_DSN"
+  PAYMENT_ALERT_WEBHOOK: "/api-secrets/PAYMENT_ALERT_WEBHOOK"
+  SLACK_WEBHOOK: "/api-secrets/SLACK_WEBHOOK"
+  BLACKFIRE_SERVER_ID: "/api-secrets/BLACKFIRE_SERVER_ID"
+  BLACKFIRE_CLIENT_ID: "/api-secrets/BLACKFIRE_CLIENT_ID"
+  OPTIMOVE_API_KEY: "/api-secrets/OPTIMOVE_API_KEY"
+  CAPTAIN_UP_SECRET_MADNIX: "/api-secrets/CAPTAIN_UP_SECRET_MADNIX"
+  CAPTAIN_UP_API_KEY_MADNIX: "/api-secrets/CAPTAIN_UP_API_KEY_MADNIX"
+  CAPTAIN_UP_SECRET_IBIZAPALACE: "/api-secrets/CAPTAIN_UP_SECRET_IBIZAPALACE"
+  CAPTAIN_UP_API_KEY_IBIZAPALACE: "/api-secrets/CAPTAIN_UP_API_KEY_IBIZAPALACE"
+  CAPTAIN_UP_SECRET_YOKIKANA: "/api-secrets/CAPTAIN_UP_SECRET_YOKIKANA"
+  CAPTAIN_UP_API_KEY_YOKIKANA: "/api-secrets/CAPTAIN_UP_API_KEY_YOKIKANA"
+  AWS_REGION: "/api-secrets/AWS_REGION"
+  AWS_ACCESS_KEY_ID: "/api-secrets/AWS_ACCESS_KEY_ID"
+  AWS_SECRET_ACCESS_KEY: "/api-secrets/AWS_SECRET_ACCESS_KEY"
+  AWS_BUCKET_MADNIX: "/api-secrets/AWS_BUCKET_MADNIX"
+  AWS_BUCKET_WILDSULTAN: "/api-secrets/AWS_BUCKET_WILDSULTAN"
+  AWS_BUCKET_WINOUI: "/api-secrets/AWS_BUCKET_WINOUI"
+  AWS_BUCKET_IBIZAPALACE: "/api-secrets/AWS_BUCKET_IBIZAPALACE"
+  AWS_BUCKET_YOKIKANA: "/api-secrets/AWS_BUCKET_YOKIKANA"
+  MYAFF_DB_USER: "/api-secrets/MYAFF_DB_USER"
+  MYAFF_DB_PASSWORD: "/api-secrets/MYAFF_DB_PASSWORD"
+  MYAFF_GOOGLE_CLOUD_CREDENTIALS: "/api-secrets/MYAFF_GOOGLE_CLOUD_CREDENTIALS"
+  MYAFF_DB_SSL_CA: "/api-secrets/MYAFF_DB_SSL_CA"
 
 ssmParametersJwtKeys:
-  publicKey: "/api-secrets/public_key"
-  privateKey: "/api-secrets/private_key"
+  publicKey: "/api-secrets/PUBLIC_KEY"
+  privateKey: "/api-secrets/PRIVATE_KEY"
 
 cronjobs:
   - name: velox-job-global-payment-alert-check
