Refactor ingress configuration in api-ingress.yaml to use ingressClassName and named port

--- a/charts/api/templates/api-ingress.yaml
+++ b/charts/api/templates/api-ingress.yaml
@@ -19,7 +19,7 @@ metadata:
     alb.ingress.kubernetes.io/security-groups: {{ .Values.ingress.securityGroups }}
     alb.ingress.kubernetes.io/subnets: {{ .Values.ingress.subnets }}
 
-kubernetes.io/ingress.class: "alb"
+
 spec:
   ingressClassName: alb
   rules:
@@ -32,4 +32,4 @@ spec:
           service:
             name: velox-api
             port:
-              number: 80
+              name: http
