Update api-ingress.yaml to specify port number instead of name for backend service

--- a/charts/api/templates/api-ingress.yaml
+++ b/charts/api/templates/api-ingress.yaml
@@ -31,5 +31,5 @@ spec:
         backend:
           service:
             name: velox-api
-            port:
-              name: http
+            port: 
+              number: 80
