Set service type to NodePort in api-service.yaml

--- a/charts/api/templates/api-service.yaml
+++ b/charts/api/templates/api-service.yaml
@@ -4,6 +4,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   name: velox-api
 spec:
+  type: NodePort
   selector:
     service: velox-api
   ports:
