Set service type to NodePort in front-service.yaml

--- a/charts/front/templates/front-service.yaml
+++ b/charts/front/templates/front-service.yaml
@@ -4,6 +4,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   name: velox-front
 spec:
+  type: NodePort
   selector:
     service: velox-front
   ports:
