--- a/charts/api/values-prod-1.yaml
+++ b/charts/api/values-prod-1.yaml
@@ -12,7 +12,8 @@ ingress:
 
 api:
   phpImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-prod-1-api:v1.0.build-5.4971b3a
-  nginxImageTag: nginx:latest
+  nginxImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-prod-1-api-nginx:latest
+
   ddStage: prod
   replicas: 1
   replicasMessageProcessor: 1
