--- a/charts/api/values-prod-1.yaml
+++ b/charts/api/values-prod-1.yaml
@@ -1,5 +1,6 @@
 apiHost: velox-api.tlf.dev
 projectName: velox-prod-1
+stage: prod-1
 aws:
   region: eu-west-1
 
@@ -14,7 +15,6 @@ api:
   phpImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-prod-1-api:v1.0.build-42.fe19405
   nginxImageTag: 156041417813.dkr.ecr.eu-west-1.amazonaws.com/velox-prod-1-api:v1.0.build-42.fe19405
 
-  ddStage: prod
   replicas: 1
   replicasMessageProcessor: 1
   phpFpmResources:
