--- a/charts/front/templates/front-ingress.yaml
+++ b/charts/front/templates/front-ingress.yaml
@@ -11,7 +11,11 @@ metadata:
     alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
     alb.ingress.kubernetes.io/healthcheck-path: {{ .Values.healthcheckPath }}
     alb.ingress.kubernetes.io/healthy-threshold-count: '3'
-    alb.ingress.kubernetes.io/tags: project={{ .Values.namespace }},Name={{ .Values.projectName }}-alb,Namespace={{ .Values.namespace }},Stage={{ .Values.ddStage }}
+    alb.ingress.kubernetes.io/tags: |-
+      project={{ .Values.namespace }},
+      Name={{ .Values.loadBalancerName }},
+      Namespace={{ .Values.namespace }},
+      Stage={{ .Values.stage }}
     alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'true'
     alb.ingress.kubernetes.io/certificate-arn: {{ .Values.certificateArn }}
     alb.ingress.kubernetes.io/security-groups: {{ .Values.securityGroups }}
